fix error after fritzbox restart